# monk-mode

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json
src/: App.tsx  data.ts  index.css  tauriService.ts  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActiveTriggers.tsx  AnalyticsPanel.tsx  BiologicalTimeline.tsx  CloudSyncBlueprint.tsx  DailyNotes.tsx  FocusZone.tsx  GoalMap.tsx  Grid100Days.tsx  SettingsAndData.tsx
