[package]
name = "monk-mode"
version = "0.1.0"
description = "Monk Mode Dashboard"
authors = ["Antigravity"]
edition = "2021"

[lib]
name = "monk_mode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
